# Cpp_ML

./: .gitignore  3D_tensor_multiplication.cpp  CMakeLists.txt  Makefile  README.md  a.out  backprop.cpp  english_spanish.csv  example_matmul.cpp  layers.cpp  layers.h  layers_multithreaded.cpp  learning.cpp  matrix_operations  matrix_operations.cpp  matrix_operations.h  mnist.h  model.h  string_to_tensor.cpp  string_to_tensor.h  tensor.cpp  tensor.h  tensor_display.cpp  tensor_display.h  tensor_mul.cpp  tensor_mul.h  tensorflow_benchmark.ipynb  train  train.cpp
dependencies/: notes.txt
dependencies/vulkan/: note.txt
include/: example_models.h  kernel.h  layers.h  matrix_operations.h  mnist.h  model.h  tensor.h  tokenizer.h  useGPU.h  use_GPU.h
include/vulkan/: note.txt
matmul/: Makefile  example_matmul.cpp  main.cpp  tensorMul  tensor_display.cpp  tensor_display.h  tensor_mul.cpp  tensor_mul.h
matrix_operations.dSYM/Contents/: Info.plist
matrix_operations.dSYM/Contents/Resources/DWARF/: matrix_operations
matrix_operations.dSYM/Contents/Resources/Relocations/aarch64/: matrix_operations.yml
shaders/binaries/: MaxPool2D_b.spv  MaxPool2D_f.spv  c_elemwise.spv  conv2d_b_dw.spv  conv2d_b_dx.spv  conv2d_f.spv  elemwise.spv  matmul.spv
shaders/code/: MaxPool2D_b.comp  MaxPool2D_f.comp  c_elemwise.comp  conv2d_b_dw.comp  conv2d_b_dx.comp  conv2d_f.comp  elemwise.comp  matmul.comp
src/: functional_model_template.cpp  img_class.cpp  kernel.cu  layers.cpp  layers_CUDA.cu  layers_GPU.cpp  layers_multithreaded.cpp  matrix_operations.cpp  matrix_ops.cpp  matrix_ops_CUDA.cu  matrix_ops_GPU.cpp  model.cpp  tensor.cpp  transformer.cpp  use_GPU.cpp
train.dSYM/Contents/Resources/DWARF/: train
(+13 files in other folders)
